--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="#" class="btn btn-warning mr-3">Login</a>
+                        <a href="login.html" class="btn btn-warning mr-3">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="btn btn-success">Signup</a>
+                        <a href="signup.html" class="btn btn-success">Signup</a>
                     </li>
                             
                 </div>
