--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#" class="btn btn-success">Signup</a>
+                        <a href="signup.html" class="btn btn-success">Signup</a>
                     </li>
                             
                 </div>
