added signup link action beneath form

--- a/login.html
+++ b/login.html
@@ -49,6 +49,7 @@
                             <button class="btn btn-primary" value="submit">Submit</button>
                             <button class="btn btn-dark" value="reset">Reset</button>
                         </form>
+                        <a href="signup.html" class="text-muted py-2">Already have an account? Click here!</a>
                     </div>   
                     </div>
                 </div>   
