--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                             <div class="form-group">
                                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                             </div>
-                            <button class="btn btn-primary" value="submit">Submit</button>
+                            <a href="index.html" class="btn btn-primary" value="submit">Submit</a>
                             <button class="btn btn-dark" value="reset">Reset</button>
                         </form>
                         <a href="signup.html" class="text-muted py-2">Already have an account? Click here!</a>
