--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
      <!-- NAVBAR  -->
      <nav class="navbar navbar-expand-lg navbar-light bg-danger py-3">
         <div class="container">
-                <a class="navbar-brand text-white" href="#">Buy and Sell</a>
+                <a class="navbar-brand text-white" href="index.html">Buy and Sell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
