linked edit button with edit.html

--- a/seller.html
+++ b/seller.html
@@ -46,17 +46,17 @@
                             <tbody>
                                 <tr>
                                     <td><h6>Dell Inspiron</h6></td>
-                                    <td><a href="" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
+                                    <td><a href="edit.html" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
                                     <td><a href="" class="btn btn-light"><i class="fas fa-trash-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <td><h6>Infinity Q60</h6></td>
-                                    <td><a href="" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
+                                    <td><a href="edit.html" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
                                     <td><a href="" class="btn btn-light"><i class="fas fa-trash-alt"></i></a></td>
                                 </tr>
                                 <tr>
                                     <td><h6>Pixel 3a XL</h6></td>
-                                    <td><a href="" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
+                                    <td><a href="edit.html" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
                                     <td><a href="" class="btn btn-light"><i class="fas fa-trash-alt"></i></a></td>
                                 </tr>
                             </tbody>
