added inifinity Q60 td

--- a/seller.html
+++ b/seller.html
@@ -60,6 +60,7 @@
                                 </tr>
                                 <tr>
 
+                                    <td><h6><a href="product-details.html" class="product-name">Infinity Q60</a></h6></td>
 
                                     <td><a href="edit.html" class="btn btn-light"><i class="fas fa-edit"></i></a></i></td>
                                     <td><a href="" class="btn btn-light"><i class="fas fa-trash-alt"></i></a></td>
