--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="login.html" class="btn btn-warning mr-3">Login</a>
+                        <a href="login.html" class="btn btn-warning mr-3">Login <span><i class="fas fa-sign-in-alt"></i></span> </a>
                     </li>
                     <li class="nav-item">
-                        <a href="signup.html" class="btn btn-success">Signup</a>
+                        <a href="signup.html" class="btn btn-success">Signup <span><i class="fas fa-user-plus"></i></span></a>
                     </li>
                             
                 </div>
@@ -118,11 +118,11 @@
                                     <p>GHC4000.00</p>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#product-id-one">View Details</a>
+                                    <a href="product-details.html" class="btn btn-info">View Details</a>
                                 </div>
 
                                 <!-- modal configuration starts here -->
-                                <div class="modal fade" id="product-id-one" tabindex="-1" role="dialog" aria-labelledby="product-id-one">
+                                <!-- <div class="modal fade" id="product-id-one" tabindex="-1" role="dialog" aria-labelledby="product-id-one">
                                     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -162,7 +162,7 @@
                                                             </tr>
                                                         </tbody>
                                                     </table>                                                
-                                                </ul>
+                                                </ul> -->
                                                 <!-- <div class="row my-2">
                                                     <div class="col-4">
                                                         <h5>Description</h5>
@@ -171,14 +171,14 @@
                                                        <p class="lead description-text"> A hotel found in the greatest parts of Accra. Classy and beautiful with affordable prices.</p>
                                                     </div>
                                                 </div> -->
-                                            </div>
+                                            <!-- </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                                                <button type="button" class="btn btn-primary">Save changes</button> 
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- modal ends here -->
                             </div>
                             <div class="card">
@@ -188,11 +188,11 @@
                                     <p>GHC 800000.00</p>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#product-id-two">View Details</a>
+                                    <a href="#" class="btn btn-info">View Details</a>
                                 </div>
 
                                 <!-- modal configuration starts here -->
-                                <div class="modal fade" id="product-id-two" tabindex="-1" role="dialog" aria-labelledby="product-id-one">
+                                <!-- <div class="modal fade" id="product-id-two" tabindex="-1" role="dialog" aria-labelledby="product-id-one">
                                     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -238,7 +238,7 @@
                                                             </tr>
                                                         </tbody>
                                                     </table>                                                
-                                                </ul>
+                                                </ul> -->
                                                 <!-- <div class="row my-2">
                                                     <div class="col-4">
                                                         <h5>Description</h5>
@@ -247,15 +247,15 @@
                                                         <p class="lead description-text"> A hotel found in the greatest parts of Accra. Classy and beautiful with affordable prices.</p>
                                                     </div>
                                                 </div> -->
-                                            </div>
+                                            <!-- </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                                                <button type="button" class="btn btn-primary">Save changes</button>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <!-- modal ends here -->
+                                </div> -->
+                                <!--modal ends here -->
                             </div>
                             <div class="card">
                                 <img src="img/pixel-3a-one.jpg" alt="" class="card-img-top">
@@ -264,10 +264,10 @@
                                     <p>GHC 5000.00</p>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#product-id-three">View Details</a>
+                                    <a href="#" class="btn btn-info">View Details</a>
                                 </div>
                                  <!-- modal configuration starts here -->
-                                 <div class="modal fade" id="product-id-three" tabindex="-1" role="dialog" aria-labelledby="product-id-three">
+                                 <!-- <div class="modal fade" id="product-id-three" tabindex="-1" role="dialog" aria-labelledby="product-id-three">
                                         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
@@ -314,7 +314,7 @@
                                                             </tbody>
                                                         </table>                                                
                                                     </ul>
-                                                    <!-- <div class="row my-2">
+                                                   <div class="row my-2">
                                                         <div class="col-4">
                                                             <h5>Description</h5>
                                                         </div>
@@ -322,14 +322,14 @@
                                                             <p class="lead description-text"> A hotel found in the greatest parts of Accra. Classy and beautiful with affordable prices.</p>
                                                         </div>
                                                     </div> -->
-                                                </div>
+                                               <!-- </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                                                    <button type="button" class="btn btn-primary">Save changes</button>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- modal ends here -->
                             </div>
                         </div>
