added font icons to buttons

--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
 </head>
 <body>
      <!-- NAVBAR  -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-danger py-3">
+     <nav class="navbar navbar-expand-lg navbar-light bg-secondary py-3">
         <div class="container">
-                <a class="navbar-brand text-white" href="#">Buy and Sell</a>
+                <a class="navbar-brand text-white" href="index.html">Buy and Sell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="signup.html" class="btn btn-success">Signup</a>
+                        <a href="signup.html" class="btn btn-success">Signup <span><i class="fas fa-user-plus"></i></span></a>
                     </li>
                             
                 </div>
@@ -46,7 +46,7 @@
                             <div class="form-group">
                                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                             </div>
-                            <a href="index.html" class="btn btn-primary" value="submit">Submit</a>
+                            <a href="seller.html" class="btn btn-primary" value="submit">Submit</a>
                             <button class="btn btn-dark" value="reset">Reset</button>
                         </form>
                         <a href="signup.html" class="text-muted py-2">Already have an account? Click here!</a>
