--- a/signup.html
+++ b/signup.html
@@ -11,9 +11,9 @@
 </head>
 <body>
      <!-- NAVBAR  -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-danger py-3">
+     <nav class="navbar navbar-expand-lg navbar-light bg-secondary py-3">
         <div class="container">
-                <a class="navbar-brand text-white" href="#">Buy and Sell</a>
+                <a class="navbar-brand text-white" href="index.html">Buy and Sell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="login.html" class="btn btn-warning">Login</a>
+                        <a href="login.html" class="btn btn-warning">Login <span><i class="fas fa-sign-in-alt"></i></span></a>
                     </li>
                             
                 </div>
